<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/primary_material_light"
                tools:context=".AlarmActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmDesc"
        android:text="@string/alarmDescText"
        android:gravity="center"
        android:paddingBottom="@dimen/default_separation_between_title_and_view"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alarmDescTxt"
        android:gravity="center"
        android:background="@drawable/alarm_desc_shape"
        android:layout_below="@id/alarmDesc"
        android:paddingBottom="@dimen/default_separation_between_categories"
        android:editable="true"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLength="50"
        android:hint="@string/alarmDescHint"
        android:lines="3"
        android:textAppearance="@color/primary_text_default_material_light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmStartTxt"
        android:text="@string/alarmStartText"
        android:gravity="center"
        android:layout_below="@id/alarmDescTxt"
        android:paddingTop="@dimen/default_separation_between_categories"
        android:paddingBottom="@dimen/default_separation_between_title_and_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/alarm_shapes"
        android:paddingLeft="@dimen/alarm_activity_date_picker_padding"
        android:paddingRight="@dimen/alarm_activity_date_picker_padding"
        android:layout_below="@id/alarmStartTxt"
        android:id="@+id/datePickerBtn"
        android:onClick="onDatePickerBtnClick"/>

    <LinearLayout
        android:id="@+id/layoutForTimePicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/alarmStartTxt"
        android:layout_toRightOf="@id/datePickerBtn"
        android:paddingBottom="@dimen/default_separation_between_categories">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/alarm_shapes"
            android:paddingLeft="@dimen/alarm_activity_time_picker_padding"
            android:paddingRight="@dimen/alarm_activity_time_picker_padding"
            android:id="@+id/timePickerBtn"
            android:layout_toRightOf="@id/datePickerBtn"
            android:onClick="onTimePickerBtnClick"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmIntervalTxt"
        android:text="@string/alarmIntervalText"
        android:layout_below="@id/layoutForTimePicker"
        android:gravity="center"
        android:paddingBottom="@dimen/default_separation_between_title_and_view"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alarm_shapes"
        android:layout_below="@id/alarmIntervalTxt"
        android:id="@+id/intervalPickerBtn"
        android:text="@string/alarmIntervalViewDefaultText"
        android:onClick="onIntervalPickerBtnClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarmNumOccurrencesTxt"
        android:text="@string/alarmNumOccurrencesText"
        android:layout_below="@id/intervalPickerBtn"
        android:gravity="center"
        android:paddingTop="@dimen/default_separation_between_categories"
        android:paddingBottom="@dimen/default_separation_between_title_and_view"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/occurrencesPicker"
        android:layout_below="@id/alarmNumOccurrencesTxt"
        android:background="@drawable/alarm_shapes"
        android:gravity="center"
        android:textAlignment="center"
        android:paddingTop="@dimen/default_separation_between_categories"
        android:paddingBottom="@dimen/default_separation_between_title_and_view"/>

    <LinearLayout
        android:id="@+id/layoutForSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/alarmNumOccurrencesTxt"
        android:paddingTop="@dimen/default_separation_to_submit_btn">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/alarm_submit_btn_shape"
            android:gravity="center"
            android:paddingLeft="@dimen/alarm_activity_submit_btn_padding"
            android:paddingRight="@dimen/alarm_activity_submit_btn_padding"
            android:layout_below="@id/occurrencesPicker"
            android:id="@+id/submitAlarmBtn"
            android:text="@string/submitAlarmBtnText"
            android:onClick="onSubmitAlarmClick"/>

    </LinearLayout>
</RelativeLayout>
